# sd-flowui

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  requirements.txt  started
backend/: pyproject.toml
backend/src/api/: __init__.py  api.py
backend/src/api/compute/: __init__.py  executor.py
backend/src/api/compute/graph/: __init__.py  components.py  graph.py  node.py
backend/src/api/routers/: __init__.py  files.py  graph.py
backend/src/api/services/: __init__.py  data.py  filewatcher.py  graph.py  websocket.py
backend/src/api/utils/: __init__.py  components.py  constants.py  data.py  decorators.py  graph.py  schemas.py  websocket.py
backend/src/api/utils/nodes/: __init__.py  clip_encode.py  load_checkpoint.py  load_checkpoint_v1.py  load_checkpoint_v2.py  node.py
backend/src/api/utils/nodes/components/: __init__.py  checkbox.py  dropdown.py  slider.py
data/nodes/: clip_encode.py  load_checkpoint.py
data/nodes/defaults/: clip_encode.py  load_checkpoint.py  types.py
frontend/: env.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json
frontend/src/: App.vue  main.ts
frontend/src/components/: CheckboxComponent.vue  Edge.vue  FileDropdownComponent.vue  Graph.vue  GraphComponent.vue  Node.vue  NodeCheckbox.vue  NodeComponent.vue  NodeFileDropdown.vue  NodeFileDropdownChild.vue  NodeTextBox.vue
frontend/src/router/: index.ts
frontend/src/services/: graph.ts  websocket.ts
frontend/src/stores/: files.ts  graph.ts
frontend/src/views/: BrowserView.vue  (+2 more)
