[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "api"
authors = [
    {name = "aaronlockhartdev", email = "aaronlockhartdev@gmail.com"},
]
readme = "../README.md"
requires-python = ">=3.10,<3.11"
license = {file = "../LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License", 
    "Private :: Do Not Upload"
]
dependencies = [
    "torch >=2.0,<3",
    "safetensors",
    "diffusers[torch] ==0.14",
    "transformers >=4.27.3,<5",
    "networkx",
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/aaronlockhartdev/sd-flowui"

[project.scripts]