[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "api"
authors = [
    {name = "aaronlockhartdev", email = "aaronlockhartdev@gmail.com"},
]
requires-python = ">=3.10, <3.11"
classifiers = [
    "License :: OSI Approved :: MIT License", 
    "Private :: Do Not Upload"
]
dependencies = [
    "torch >=2.0,<3",
    "safetensors",
    "diffusers[torch] >=0.15,<1",
    "transformers >=4.27.3,<5",
    "networkx",
    "watchfiles",
    "websockets",
    "omegaconf",
    "colored"
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/aaronlockhartdev/sd-flowui"

[project.scripts]